# cvops

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml  questions.md  tox.ini
.dvc/: .gitignore  config
.github/workflows/: cml.yaml
crim2023/: data.py  model.py  train.py
cvops/: configs.py  data.py  model.py  train.py
cvops/data/: data.py  importer.py
cvops/report/: pull_request_report.py
data/: datasets.dvc
docs/: dvc.md  tools.md  versionning.md
docs/source/: conf.py  index.rst  versionning.md
notebooks/: 1.0-fql-segmentation_unet.ipynb
tests/: test_data.py  test_train.py
