[tool.poetry]
name = "cvops"
version = "0.1.0"
description = "A template for static image analysis ML Ops"
authors = ["francis <francisquintallauzon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.1"
pytorch-lightning = "^1.8.6"
torch = "^1.13.1"
opencv-python = "^4.7.0.68"
torchvision = "^0.14.1"
albumentations = "^1.3.0"
pandas = "^1.5.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.19.4"
ipywidgets = "^8.0.4"
pytest = "^7.2.0"
sphinx = "^6.1.1"
pylint = "^2.15.9"
black = "^22.12.0"
tox = "^4.2.4"
pre-commit = "^2.21.0"
tensorboard = "^2.11.0"
pandas = "^1.5.2"
matplotlib = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib",]
pythonpath = "./"

[tool.black]
line-length = 119
